[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/UI/PlayerHUD/Hotbar/Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/UI/PlayerHUD/Hotbar/Hotbar.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.423529, 0.247059, 0.658824, 1 )

[node name="Hotbar" type="GridContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -40.0
margin_right = 16.0
margin_bottom = 40.0
custom_constants/vseparation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Slot1" parent="." instance=ExtResource( 1 )]

[node name="Slot2" parent="." instance=ExtResource( 1 )]
margin_top = 16.0
margin_bottom = 32.0

[node name="Slot3" parent="." instance=ExtResource( 1 )]
margin_top = 32.0
margin_bottom = 48.0

[node name="Slot4" parent="." instance=ExtResource( 1 )]
margin_top = 48.0
margin_bottom = 64.0

[node name="Slot5" parent="." instance=ExtResource( 1 )]
margin_top = 64.0
margin_bottom = 80.0

[node name="SelectionMarker" type="Panel" parent="."]
visible = false
margin_top = 80.0
margin_right = 16.0
margin_bottom = 96.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="HeldItemSprite" type="Sprite" parent="."]
